# PVPArena

./: ActiveEntity.cpp  ActiveEntity.h  CMakeLists.txt  Category.h  Command.cpp  Command.h  CommandQueue.cpp  CommandQueue.h  Data.cpp  Data.h  Entity.cpp  Entity.h  Game.cpp  Game.h  Player.cpp  Player.h  Projectile.cpp  Projectile.h  README.md  ResourceHolder.h  ResourceHolder.inl  Resources.h  SceneNode.cpp  SceneNode.h  Soldier.cpp  Soldier.h  SpriteNode.cpp  SpriteNode.h  TextNode.cpp  TextNode.h  Utilities.cpp  Utilities.h  World.cpp  World.h  main.cpp
